tests/lean/holeErrors.lean.expected.out
holeErrors.lean:3:11-3:20: error: Failed to infer definition type.

Partial assignment
  ?_ → ?_

context:
⊢ Sort u
holeErrors.lean:3:14-3:20: error: Implicit argument could not be inferred in application of `id`.

The argument `α` is not determined by the other arguments or the expected type in
  @id ?_

context:
⊢ Sort u
holeErrors.lean:5:9-5:10: error: Failed to infer definition type.

context:
⊢ Sort ?u
holeErrors.lean:5:0-5:10: warning: Declaration type has metavariables.

Recall that when the resulting type of a declaration is explicitly provided, all placeholders (e.g., `_`) in the header must be resolved before the declaration body is processed.
holeErrors.lean:7:11-9:1: error: Failed to infer definition type.

Partial assignment
  ?_ → ?_

context:
⊢ Sort u
holeErrors.lean:8:4-8:5: error: failed to infer 'let' declaration type

Partial assignment
  ?_ → ?_

context:
⊢ Sort u
holeErrors.lean:8:9-8:15: error: Implicit argument could not be inferred in application of `id`.

The argument `α` is not determined by the other arguments or the expected type in
  @id ?_

context:
⊢ Sort u
holeErrors.lean:11:8-11:9: error: Failed to infer type for binder `x`.

context:
⊢ Sort ?u
holeErrors.lean:11:11-11:15: error: Failed to infer definition type.

context:
x : ?_
⊢ Sort ?u
holeErrors.lean:13:12-13:13: error: Failed to infer type for binder `x`.

context:
⊢ Sort ?u
holeErrors.lean:13:15-13:19: error: Failed to infer definition type.

context:
x : ?_
⊢ Sort ?u
holeErrors.lean:15:7-16:10: error: Failed to infer definition type.

Partial assignment
  ?_ → ?_

context:
⊢ Sort ?u
holeErrors.lean:16:4-16:5: error: Failed to infer type for binder `x`.

context:
⊢ Sort ?u
holeErrors.lean:19:8-19:9: error: failed to infer 'let rec' declaration type

Partial assignment
  ?_ → ?_

context:
⊢ Sort u
holeErrors.lean:19:13-19:19: error: Implicit argument could not be inferred in application of `id`.

The argument `α` is not determined by the other arguments or the expected type in
  @id ?_

context:
⊢ Sort u
